syntax = "proto3";

package proto;

option go_package = "github.com/bohexists/task-manager-svc/api/proto;proto";

message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message TaskID {
  int64 id = 1;
}

message Empty {}

service TaskService {
  rpc CreateTask (Task) returns (TaskID);
  rpc GetTask (TaskID) returns (Task);
  rpc UpdateTask (Task) returns (Empty);
  rpc DeleteTask (TaskID) returns (Empty);
  rpc ListTasks (Empty) returns (stream Task);
}